FIX NOWRAP LIST BOX MARGINS

--- a/Blog/static/Blog/CSS/styles.css
+++ b/Blog/static/Blog/CSS/styles.css
@@ -282,11 +282,20 @@ input[type="file"] {
 }
 
 .list-box.nowrap {
-	padding: 0.3em 0;
+	margin: 0;
 	overflow: auto;
 	max-width: 100%;
+	padding: 0.3em 0;
 	flex-wrap: nowrap;
 	position: relative;
+}
+
+.list-box.nowrap>* {
+	margin-bottom: 0;
+}
+
+.list-box.nowrap>*:last-child {
+	margin-right: 0;
 }
 
 .list-box.nowrap::before, .list-box.nowrap::after {
